--- a/src/pages/profile/styles.pcss
+++ b/src/pages/profile/styles.pcss
@@ -14,9 +14,14 @@
   justify-content: center;
 }
 
+.avatarWrapper {
+  width: 130px;
+  height: 130px;
+}
+
 .userName {
   font-size: 24px;
-  margin-bottom: 60px;
+  margin: 18px 0 60px;
 }
 
 .footerContainer {
