refactor, fix styles

--- a/src/entities/auth-form/styles.pcss
+++ b/src/entities/auth-form/styles.pcss
@@ -1,4 +1,4 @@
-.formWrapper {
+.authFormWrapper {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.formContainer {
+.authFormContainer {
   position: relative;
   width: 340px;
   min-height: 460px;
@@ -59,7 +59,7 @@
   align-items: center;
 }
 
-.submitButton {
+.authSubmitButton {
   width: 280px;
   height: 37px;
   border: none;
@@ -72,5 +72,5 @@
   color: var(--color-primary);
   border: none;
   background: transparent;
-  margin-bottom: 23px;
+  margin: 8px 0 23px;
 }
