--- a/src/entities/edit-form/styles.pcss
+++ b/src/entities/edit-form/styles.pcss
@@ -7,18 +7,19 @@
   justify-content: center;
 }
 
-.editFormtitle {
-  font-size: 24px;
+.editProfileAvatarWrapper {
+  width: 130px;
+  height: 130px;
   margin-bottom: 60px;
 }
 
 .submitButton {
   width: 280px;
   height: 37px;
-  margin-bottom: 18px;
+  margin: 80px 0 18px;
 }
 
 .cancelButton {
-  color: inherit;
+  color: var(--color-primary);
   background-color: transparent;
 }
