--- a/src/pages/profile/styles.pcss
+++ b/src/pages/profile/styles.pcss
@@ -20,7 +20,8 @@
 }
 
 .userName {
-  font-size: 24px;
+  font-size: 16px;
+  font-weight: 600;
   margin: 18px 0 60px;
 }
 
@@ -30,7 +31,7 @@
   align-items: start;
 }
 
-.buttonLinkWrapper {
+.editButtonWrapper {
   width: 100%;
   height: 34px;
   display: flex;
@@ -38,8 +39,8 @@
   border-bottom: 1px solid #EAEAEA;
 }
 
-.buttonLink {
-  color: inherit;
+.editButton {
+  color: var(--color-primary);
   background-color: transparent;
   padding: 0;
 }
