--- a/src/index.pcss
+++ b/src/index.pcss
@@ -4,6 +4,8 @@
 
   --color-primary: #3369F3;
   --color-secondary: #999999;
+
+  --color-text: #1E1E1E;
 }
 
 body {
@@ -17,6 +19,7 @@ h4, h5, h6, p, a, ol, ul, li, form, label {
   padding: 0;
   border: 0;
   vertical-align: baseline;
+  color: var(--color-text);
 }
 
 main, footer {
@@ -37,6 +40,13 @@ form {
 
 input {
   border: none;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+	-webkit-appearance:none;
 }
 
 a.text:active, a.text:hover, a {
