add stylelint, fix styles

--- a/src/entities/chat-preview/styles.pcss
+++ b/src/entities/chat-preview/styles.pcss
@@ -1,14 +1,14 @@
-.chatPreviewContainer {
+.chat-preview-container {
   display: flex;
   border-bottom: 1px solid #EAEAEA;
   padding: 14px 0;
 }
 
-.chatPreviewAvatarWrapper {
+.chat-preview-avatar-wrapper {
   margin-right: 14px;
 }
 
-.chatPreviewAvatar {
+.chat-preview-avatar {
   height: 47px;
   width: 47px;
 
@@ -18,20 +18,20 @@
   }
 }
 
-.chatPreviewUserName {
+.chat-preview-user-name {
   font-size: 13px;
   line-height: 13px;
   font-weight: 600;
   margin-bottom: 5px;
 }
 
-.chatPreviewMessageText {
+.chat-preview-message-text {
   font-size: 12px;
   line-height: 15px;
   color: var(--color-secondary);
 }
 
-.chatPreviewInfoContainer {
+.chat-preview-info-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -39,13 +39,13 @@
   margin-left: 14px;
 }
 
-.chatPreviewTimeInfo {
+.chat-preview-time-info {
   font-size: 9px;
   line-height: 13px;
   color: var(--color-secondary);
 }
 
-.newMessagesInfo {
+.new-messages-info {
   width: 20px;
   height: 20px;
   font-size: 11px;
