--- a/src/entities/error/styles.pcss
+++ b/src/entities/error/styles.pcss
@@ -1,27 +1,27 @@
-.errorWrapper {
+.error-wrapper {
   height: 100vh;
   display: flex;
   justify-content: center;
 }
 
-.errorContainer {
+.error-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.errorTitle {
+.error-title {
   font-size: 40px;
   font-weight: 500;
 }
 
-.errorDescription {
+.error-description {
   font-size: 20px;
   margin-top: 20px;
   font-weight: 500;
 }
 
-.errorLink {
+.error-link {
   margin-top: 80px;
 }
