--- a/src/index.pcss
+++ b/src/index.pcss
@@ -3,13 +3,12 @@
 	height: 100%;
 
   --color-primary: #3369F3;
-  --color-secondary: #999999;
-
+  --color-secondary: #999;
   --color-text: #1E1E1E;
 }
 
 body {
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: Inter, Arial, sans-serif;
   font-size: 13px;
 }
 
@@ -46,7 +45,7 @@ input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
-	-webkit-appearance:none;
+	appearance:none;
 }
 
 a.text:active, a.text:hover, a {
@@ -60,7 +59,7 @@ a.text:active, a.text:hover, a {
 }
 
 button {
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: Inter, Arial, sans-serif;
   font-size: 13px;
   color: white;
   background-color: var(--color-primary);
