--- a/src/entities/edit-form/styles.pcss
+++ b/src/entities/edit-form/styles.pcss
@@ -1,4 +1,4 @@
-.editFormContainer {
+.edit-form-container {
   height: 100%;
   width: 510px;
   display: flex;
@@ -7,19 +7,19 @@
   justify-content: center;
 }
 
-.editProfileAvatarWrapper {
+.edit-profile-avatar-wrapper {
   width: 130px;
   height: 130px;
   margin-bottom: 60px;
 }
 
-.submitButton {
+.submit-button {
   width: 280px;
   height: 37px;
   margin: 80px 0 18px;
 }
 
-.cancelButton {
+.cancel-button {
   color: var(--color-primary);
   background-color: transparent;
 }
