--- a/src/pages/home/styles.pcss
+++ b/src/pages/home/styles.pcss
@@ -1,23 +1,23 @@
-.homePageContainer {
+.home-page-container {
   display: grid;
   grid-template-columns: 310px auto;
 }
 
-.chatsContainer {
+.chats-container {
   height: 100vh;
   background: #FBFBFB;
   border-right: 1px solid #EAEAEA;
   padding: 0 10px;
 }
 
-.chatsHeader {
+.chats-header {
   display: flex;
   flex-direction: column;
   align-items: end;
   border-bottom: 1px solid #EAEAEA;
 }
 
-.chatsButtonToProfile {
+.chats-button-to-profile {
   width: 100px;
   font-size: 12px;
   line-height: 12px;
@@ -32,7 +32,7 @@
   }
 }
 
-.chatsSearchInput {
+.chats-search-input {
   height: 32px;
   width: 100%;
   font-size: 12px;
@@ -47,6 +47,7 @@
   &::placeholder {
     color: var(--color-secondary);
   }
+
   &:active, &:focus {
     background-position: 10px 10px; 
     text-align: start;
@@ -54,23 +55,23 @@
   }
 }
 
-.chatContainer {
+.chat-container {
   margin: 0 20px;
   display: grid;
   grid-template-rows: 55px auto 55px;
 }
 
-.chatUserInfoContainer {
+.chat-user-info-container {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #EAEAEA;
 }
 
-.chatAvatarWrapper {
+.chat-avatar-wrapper {
   margin-right: 10px;
 }
 
-.chatAvatar {
+.chat-avatar {
   height: 34px;
   width: 34px;
   
@@ -80,21 +81,21 @@
   }
 }
 
-.chatMessageInputWrapper {
+.chat-message-input-wrapper {
   width: 100%;
   display: flex;
   align-items: center;
   border-top: 1px solid #EAEAEA;
 }
 
-.chatMessageAttachButton,
-.chatMessageSendButton {
+.chat-message-attach-button,
+.chat-message-send-button {
   display: flex;
   align-items: center;
   background-color: transparent;
 }
 
-.chatMessageAttachButton {
+.chat-message-attach-button {
   & img {
     &:hover {
       fill: var(--color-primary);
@@ -102,7 +103,7 @@
   }
 }
 
-.chatMessageInput {
+.chat-message-input {
   width: 100%;
   height: 32px;
   background-color: #EFEFEF;
