--- a/src/pages/profile/styles.pcss
+++ b/src/pages/profile/styles.pcss
@@ -1,11 +1,11 @@
-.profileInfoWrapper {
+.profile-info-wrapper {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.profileInfoContainer {
+.profile-info-container {
   height: 100%;
   width: 510px;
   display: flex;
@@ -14,24 +14,24 @@
   justify-content: center;
 }
 
-.avatarWrapper {
+.avatar-wrapper {
   width: 130px;
   height: 130px;
 }
 
-.userName {
+.user-name {
   font-size: 16px;
   font-weight: 600;
   margin: 18px 0 60px;
 }
 
-.footerContainer {
+.footer-container {
   width: 100%;
   margin-top: 60px;
   align-items: start;
 }
 
-.editButtonWrapper {
+.edit-button-wrapper {
   width: 100%;
   height: 34px;
   display: flex;
@@ -39,19 +39,19 @@
   border-bottom: 1px solid #EAEAEA;
 }
 
-.editButton {
+.edit-button {
   color: var(--color-primary);
   background-color: transparent;
   padding: 0;
 }
 
-.logoutButton {
+.logout-button {
   height: 34px;
-  color: #FF0000;
+  color: #F00;
   background-color: transparent;
   padding: 0;
 }
 
-.navLink {
+.nav-link {
   margin-top: 32px;
 }
