--- a/src/shared/profile-edit-item/styles.pcss
+++ b/src/shared/profile-edit-item/styles.pcss
@@ -1,4 +1,4 @@
-.profileEditItemContainer {
+.profile-edit-item-container {
   width: 100%;
   height: 34px;
   display: flex;
@@ -8,7 +8,7 @@
   position: relative;
 }
 
-.editProfileInput {
+.edit-profile-input {
   position: absolute;
   right: 0;
   text-align: end;
