--- a/src/shared/profile-info-item/styles.pcss
+++ b/src/shared/profile-info-item/styles.pcss
@@ -1,4 +1,4 @@
-.profileInfoItemContainer {
+.profile-info-item-container {
   width: 100%;
   height: 34px;
   border-bottom: 1px solid #EAEAEA;
@@ -7,6 +7,6 @@
   align-items: center;
 }
 
-.itemText {
+.item-text {
   color: var(--color-secondary);
 }
