add chat history, custom class Fetch

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -5,6 +5,7 @@
   --color-primary: #3369F3;
   --color-secondary: #999;
   --color-text: #1E1E1E;
+  --color-light-blue: #E4EDFD;
 }
 
 body {
@@ -19,6 +20,7 @@ h4, h5, h6, p, a, ol, ul, li, form, label {
   border: 0;
   vertical-align: baseline;
   color: var(--color-text);
+  font-weight: 500;
 }
 
 main, footer {
