--- a/src/entities/chat-preview/styles.pcss
+++ b/src/entities/chat-preview/styles.pcss
@@ -1,7 +1,12 @@
 .chat-preview-container {
   display: flex;
   border-bottom: 1px solid #EAEAEA;
-  padding: 14px 0;
+  padding: 14px 10px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--color-light-blue);
+  }
 }
 
 .chat-preview-avatar-wrapper {
