--- a/src/entities/auth-form/styles.pcss
+++ b/src/entities/auth-form/styles.pcss
@@ -42,7 +42,12 @@
   line-height: 9px;
 }
 
-.field-input {
+.field-input-error {
+  color: var(--color-error);
+}
+
+.field-input,
+.field-input-error {
   height: 24px;
   width: 280px;
   border: none;
