add fetching data

--- a/src/entities/chat-preview/styles.pcss
+++ b/src/entities/chat-preview/styles.pcss
@@ -3,6 +3,7 @@
   border-bottom: 1px solid #EAEAEA;
   padding: 14px 10px;
   cursor: pointer;
+  background-color: #FBFBFB;
 
   &:hover {
     background-color: var(--color-light-blue);
@@ -37,6 +38,7 @@
 }
 
 .chat-preview-info-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
