--- a/src/pages/messenger/styles.pcss
+++ b/src/pages/messenger/styles.pcss
@@ -5,7 +5,7 @@
 
 .chats-container {
   height: 100vh;
-  background: #FBFBFB;
+  background-color: #FBFBFB;
   border-right: 1px solid #EAEAEA;
 }
 
@@ -15,6 +15,15 @@
   align-items: end;
   border-bottom: 1px solid #EAEAEA;
   padding: 0 10px;
+}
+
+.users-search-wrapper {
+  position: absolute;
+  top: 105px;
+  left: 0;
+  width: 310px;
+  border-right: 1px solid #EAEAEA;
+  z-index: 10;
 }
 
 .chats-button-to-profile {
@@ -56,9 +65,10 @@
 }
 
 .chat-container {
-  margin: 0 20px;
+  height: 100vh;
   display: grid;
   grid-template-rows: 55px auto 55px;
+  margin: 0 20px;
 }
 
 .chat-user-info-container {
@@ -82,19 +92,41 @@
 }
 
 .chat-history-container {
+  overflow: scroll;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-top: 48px;
+  margin-top: 24px;
+  position: relative;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .chat-history-date {
-  width: 100%;
-  color: var( --color-secondary);
   font-size: 12px;
   line-height: 12px;
-  text-align: center;
   margin-bottom: 30px;
+}
+
+.chat-not-selected-placeholder {
+  color: var( --color-secondary);
+  text-align: center;
+  left: 50%;
+}
+
+.chat-empty-placeholder,
+.chat-not-selected-placeholder {
+  position: absolute;
+  top: 45%;
+}
+
+.chat-history-date,
+.chat-empty-placeholder {
+  width: 100%;
+  color: var( --color-secondary);
+  text-align: center;
 }
 
 .chat-message-input-wrapper {
@@ -119,12 +151,17 @@
   }
 }
 
+.chat-message-send-button {
+  margin-left: 60px;
+}
+
 .chat-message-input {
   width: 100%;
   height: 32px;
   background-color: #EFEFEF;
   border-radius: 30px;
   margin: 0 10px;
+  padding: 0 20px;
   
   &::placeholder {
     font-size: 12px;
