--- a/src/shared/message-item/styles.pcss
+++ b/src/shared/message-item/styles.pcss
@@ -1,3 +1,11 @@
+.chat-history-message-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 24px;
+  position: relative;
+}
+
 .chat-user-message-container,
 .chat-current-user-message-container {
   max-width: 380px;
