fix styles, add redirects

--- a/src/shared/message-item/styles.pcss
+++ b/src/shared/message-item/styles.pcss
@@ -29,6 +29,7 @@
 .chat-user-message-container {
   background-color: #F8F8F8;
   border-radius: 0 12px 12px;
+  align-self: start;
 }
 
 .chat-user-message-time {
