--- a/src/entities/chat-preview/styles.pcss
+++ b/src/entities/chat-preview/styles.pcss
@@ -24,6 +24,15 @@
   }
 }
 
+.chat-preview-text-info-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .chat-preview-user-name {
   font-size: 13px;
   line-height: 13px;
@@ -38,7 +47,6 @@
 }
 
 .chat-preview-info-container {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
