--- a/src/pages/messenger/styles.pcss
+++ b/src/pages/messenger/styles.pcss
@@ -35,6 +35,10 @@
   background-color: transparent;
   margin: 21px 0;
 
+  &:hover {
+    color: var(--color-primary);
+  }
+
   & img {
     padding-top: 2px;
     margin-left: 8px;
