--- a/src/pages/messenger/styles.pcss
+++ b/src/pages/messenger/styles.pcss
@@ -18,12 +18,18 @@
 }
 
 .users-search-wrapper {
+  height: calc(100vh - 105px);
   position: absolute;
   top: 105px;
   left: 0;
+  overflow: scroll;
   width: 310px;
   border-right: 1px solid #EAEAEA;
   z-index: 10;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .chats-button-to-profile {
