--- a/src/pages/messenger/styles.pcss
+++ b/src/pages/messenger/styles.pcss
@@ -1,9 +1,10 @@
 .home-page-container {
   display: grid;
   grid-template-columns: 310px auto;
+  position: relative;
 }
 
-.chats-container {
+.chats-left-side-container {
   height: 100vh;
   background-color: #FBFBFB;
   border-right: 1px solid #EAEAEA;
@@ -17,18 +18,29 @@
   padding: 0 10px;
 }
 
-.users-search-wrapper {
-  height: calc(100vh - 105px);
-  position: absolute;
-  top: 105px;
-  left: 0;
-  overflow: scroll;
-  width: 310px;
-  border-right: 1px solid #EAEAEA;
-  z-index: 10;
+.chats-header-buttons-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  &::-webkit-scrollbar {
-    display: none;
+.chats-add-new-button {
+  width: 35px;
+  height: 35px;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-left: 4px;
+  
+  &:hover {
+    background-color: var(--color-light-blue);
+  }
+
+  & img {
+    width: 17px;
   }
 }
 
@@ -74,6 +86,15 @@
   }
 }
 
+.chats-container {
+  height: calc(100vh - 105px);
+  overflow: scroll;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .chat-container {
   height: 100vh;
   display: grid;
@@ -98,13 +119,34 @@
 }
 
 .chat-avatar {
-  height: 34px;
-  width: 34px;
-  
   & img {
     height: 15px;
     width: 15px;
   }
+}
+
+.full-chat-img-avatar {
+  & img {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+  }
+}
+
+.chat-avatar,
+.full-chat-img-avatar {
+  height: 34px;
+  width: 34px;
+  cursor: pointer;
+
+  &:hover {
+    filter: brightness(60%);
+  }
+}
+
+
+.chat-header-buttons-wrapper {
+  display: flex;
 }
 
 .chat-delete-button {
@@ -115,6 +157,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  margin-left: 6px;
 
   &:hover {
     background-color: #EAEAEA;
@@ -145,7 +188,7 @@
 }
 
 .chat-not-selected-placeholder {
-  color: var( --color-secondary);
+  color: var(--color-secondary);
   text-align: center;
   left: 50%;
 }
@@ -201,5 +244,69 @@
     font-size: 12px;
     color: var(--color-secondary);
     padding-left: 20px;
+  }
+}
+
+.modal-wrapper {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+  opacity: 1;
+}
+
+.modal {
+  width: 340px;
+  min-height: 257px;
+  border-radius: 12px;
+  background-color: #FFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 32px;
+  gap: 24px;
+  position: relative;
+}
+
+.modal-title {
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+.modal-input {
+  height: 24px;
+  border: none;
+  border-bottom: 1px solid var(--color-primary);
+  padding-top: 24px;
+
+  &:focus, &:active {
+    border-bottom: 3px solid var(--color-primary);
+  }
+}
+
+.modal-button {
+  width: 100%;
+  height: 37px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 18px;
+  right: 18px;
+  width: 35px;
+  height: 35px;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+
+  .button-image {
+    width: 22px;
   }
 }
