--- a/src/pages/profile/styles.pcss
+++ b/src/pages/profile/styles.pcss
@@ -17,6 +17,17 @@
 .avatar-wrapper {
   width: 130px;
   height: 130px;
+
+  & img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+}
+
+.avatar-placeholder-wrapper {
+  width: 130px;
+  height: 130px;
 }
 
 .user-name {
