--- a/src/pages/messenger/styles.pcss
+++ b/src/pages/messenger/styles.pcss
@@ -254,8 +254,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #000;
-  opacity: 1;
+  background-color: #00000080;
 }
 
 .modal {
